- fixed bugs in main tab navigation - fixed list view - fixed sorting icons in resizable tables - fixed databrowser - added white background to table headers - fixed minimal header with in resizable tables - added "column visibiliy" button to control column visibility - made columns with a fixed pixel width sticky

--- a/www/css/base.css
+++ b/www/css/base.css
@@ -792,20 +792,24 @@ border: none;
 }
 .ListTable td 
 {
-/* 	height:20px; */
+	height:10px;
 /* 	margin-bottom: 2px; */
-/* 	padding: 4px 4px; */
+	padding: 4px 4px;
 	white-space: nowrap;
 	overflow: hidden;
 }
 .ListTable tr 
 {
-	vertical-align: top;
+/* 	vertical-align: top; */
 }
 .ListTableColumnFirstEntry
 {
 	border-left:solid white 2px;
+	padding: 0 !important;
+	vertical-align: middle;
 }
+
+
 .ListTableColumnLastEntry
 {
 	border-right:solid white 2px;
